KAS-4282 Removal of layout wrappers from components & adjustment of outer structure (of those components)

--- a/app/components/agenda/agenda-overview.hbs
+++ b/app/components/agenda/agenda-overview.hbs
@@ -1,4 +1,4 @@
-<div class="vlc-agenda-items auk-u-m-8">
+<div class="vlc-agenda-items" ...attributes>
   {{#if @isEditingOverview}}
     <ChangesAlert
       @message={{t "editing-agenda-overview"}}
