--- a/app/components/agenda/agendaitem/agendaitem-decision-edit.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision-edit.hbs
@@ -1,7 +1,8 @@
 {{! Editor with annotated decision  text will come somwhere around here in the future }}
 <div
-  class="auk-o-flex auk-o-flex--vertical-center auk-u-my-2"
   data-test-agendaitem-decision-edit-result-container
+  class="auk-o-flex auk-o-flex--vertical-center"
+  ...attributes
 >
   <Auk::Label class="auk-u-sr-only">{{t "result-decision"}}</Auk::Label>
   <Decision::DecisionResultSelect
