--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -83,6 +83,7 @@
               @decisionActivity={{@decisionActivity}}
               @onSave={{perform this.onDecisionEdit}}
               @onCancel={{this.toggleEditPill}}
+              class="auk-u-my-2"
             />
           {{/if}}
         </Group.Item>
