--- a/app/components/documents/linked-document-list.hbs
+++ b/app/components/documents/linked-document-list.hbs
@@ -6,7 +6,9 @@
       <Documents::LinkedDocumentLink
         @documentContainer={{history.documentContainer}}
         @lastPiece={{history.lastPiece}}
-        @onUnlinkDocumentContainer={{@onUnlinkDocumentContainer}} />
+        @onUnlinkDocumentContainer={{@onUnlinkDocumentContainer}}
+        class="auk-u-mb-2"
+      />
     {{else}}
       <div class="auk-u-mt-2">
         <AuAlert
