--- a/app/components/publications/publication/case/government-areas/government-areas-panel.hbs
+++ b/app/components/publications/publication/case/government-areas/government-areas-panel.hbs
@@ -4,5 +4,6 @@
     @governmentAreas={{this.governmentAreas}}
     @allowEditing={{true}}
     @onSave={{this.saveGovernmentAreas}}
+    class="auk-u-mb-3"
   />
 {{/unless}}
