--- a/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-edit.hbs
@@ -1,4 +1,4 @@
-<Auk::Panel class="auk-panel--editing auk-u-mb-8">
+<Auk::Panel class="auk-panel--editing" ...attributes>
   <Auk::Panel::Header>
     <Auk::Toolbar>
       <Auk::Toolbar::Group @position="left">
