--- a/app/templates/agenda/agendaitems.hbs
+++ b/app/templates/agenda/agendaitems.hbs
@@ -58,6 +58,7 @@
             @toggleShowModifiedOnly={{this.toggleShowModifiedOnly}}
             @isEditingOverview={{this.isEditingOverview}}
             @toggleIsEditingOverview={{toggle "isEditingOverview" this}}
+            class="auk-u-m-8"
           />
           {{#if this.assignNewPriorities.isRunning}}
             <WebComponents::LoadingOverlay />
