--- a/app/templates/publications/publication/decisions.hbs
+++ b/app/templates/publications/publication/decisions.hbs
@@ -2,6 +2,7 @@
   {{page-title (t "publication-details-tab-decisions")}}
   <Publications::Publication::Decisions::Info::DecisionsInfoPanel
     @publicationFlow={{this.model}}
+    class="auk-u-mb-3"
   />
 
   {{outlet}}
