--- a/app/components/documents/linked-document-link.hbs
+++ b/app/components/documents/linked-document-link.hbs
@@ -1,4 +1,4 @@
-<div class="vlc-document-card auk-u-mb-2" data-test-linked-document-link-card>
+<div class="vlc-document-card" data-test-linked-document-link-card ...attributes>
   <div class="vlc-document-card__summary">
     <div class="vlc-document-card__content">
       <Auk::Toolbar @auto={{true}} as |Toolbar|>
