--- a/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
+++ b/app/components/subcase/subcase-titles-panel/subcase-titles-panel-edit.hbs
@@ -1,4 +1,4 @@
-<Auk::Panel class="auk-panel--editing auk-u-mb-8">
+<Auk::Panel class="auk-panel--editing">
   <Auk::Panel::Body>
     <div class="au-c-form">
       <AuFormRow>
