update beleidsdomeinen filter

--- a/app/components/search/minister-filter.hbs
+++ b/app/components/search/minister-filter.hbs
@@ -39,7 +39,8 @@
       </AuButton>
     {{/if}}
   {{/if}}
-  {{#each this.selectedCurrentMinisters as |minister|}}
+  {{!-- Selective beleidsdomeinen filter mockup --}}
+  {{!-- {{#each this.selectedCurrentMinisters as |minister|}}
     <AuHr />
     <div>
       <AuLabel>{{minister.fullName}} beleidsdomeinen:</AuLabel>
@@ -125,5 +126,5 @@
       </AuCheckboxGroup>
       {{/if}}
     </div>
-  {{/each}}
+  {{/each}} --}}
 {{/if}}
