--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -56,6 +56,9 @@
               @showPastMinisters={{true}}
             />
           </div>
+          <div class="au-c-card au-o-box au-o-box--small">
+            <Search::DomainFilter />
+          </div>
         </div>
       </div>
     </div>
