--- a/app/components/documents/document-card/edit-modal.hbs
+++ b/app/components/documents/document-card/edit-modal.hbs
@@ -125,6 +125,14 @@
         </c.content>
       </AuCard>
     {{/if}}
+     <AuCard @size="small" class="au-u-margin-top-small" as |c|>
+      <c.content>
+        <div class="auk-form-group">
+          <AuLabel for="type">Document nummer</AuLabel>
+          <AuInput @width="block" />
+        </div>
+      </c.content>
+    </AuCard>
     <AuCard @size="small" class="au-u-margin-top-small" as |c|>
       <c.content>
         <div class="auk-form-group">
