--- a/app/components/search/domain-filter.hbs
+++ b/app/components/search/domain-filter.hbs
@@ -14,7 +14,7 @@
   </AuButton>
 {{else}}
   <Auk::CheckboxTree
-    @label={{t "past-ministers"}}
+    @label="Vorige beleidsdomeinen"
     @items={{this.pastDomains}}
     @itemStructure={{hash label="fullName"}}
   />
