--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -117,7 +117,7 @@
               {{/if}}
               {{#if (eq @agendaContext.agenda.status.isDesignAgenda false)}}
                 {{#if this.vpSent}} 
-                <p>Dit document is ingediend bij het Vlaams Parlement op 29/09/2023</p>
+                <p>Dit document is doorgestuurd naar het Vlaams Parlement op 29/09/2023</p>
                 {{/if}}
               {{/if}}
             </div>
@@ -266,7 +266,7 @@
                     {{on "click" this.showVpModal}}
                     role="menuitem"
                   >
-                    Indienen bij Vlaams Parlement
+                    Doorsturen naar het Vlaams Parlement
                   </AuButton>
                 {{/if}}
                 {{#if this.hasMarkedSignFlow}}
@@ -413,7 +413,7 @@
       @skin="primary"
       {{on "click" this.submitToVp}}
     >
-      Indienen bij het Vlaams Parlement
+      Doorsturen naar het Vlaams Parlement
     </AuButton>
   </Auk::Modal::Footer>
 </Auk::Modal>
